--- a/about.Rmd
+++ b/about.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "About this blog"
+title: "Over deze blog"
 description: |
-  Some additional details about the blog
+  
 ---
 
 ```{r setup, include=FALSE}
